K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment       
metadata: 
    name: commands-depl
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: commandservice 
    template: 
        metadata: 
            labels:
                app: commandservice 
        spec:
            containers:
                - name: commandservice  
                  image: f136pix/commandservice:latest
---
# ClusterIp 
# assigns a internal ip inside of the kubernetes container for the service
apiVersion: v1
kind: Service
metadata:
    name: commands-clusterip-srv # internal endpoint
spec:
    type: ClusterIP
    selector:
        app: commandservice
    ports:
    - name: commandservice
      protocol: TCP
      targetPort: 8080
      port: 8080
