K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data # path where db will be saved at
              name:  mssqldb
      volumes: # indexing it to our persistance volume claim - local-pvc.yaml
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim  
---
# ClusterIp 
# assigns a internal ip inside of the kubernetes container for the service
apiVersion: v1
kind: Service
metadata:
    name: mssql-clutsterip-srv # internal endpoint
spec:
    type: ClusterIP
    selector:
      app: mssql 
    ports:
    - name: mssql 
      protocol: TCP
      targetPort: 1433 
      port: 1433
---
# assignin a public ip with laod-balancer 
apiVersion: v1
kind: Service
metadata:
    name: mssql-loadbalancer 
spec:
    type: LoadBalancer 
    selector:
      app: mssql 
    ports:
    - protocol: TCP
      targetPort: 1433 
      port: 1433
