K8S/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # adds http to https
spec:
  rules:
    - host: nginx.com # url prefix
      http:
        paths: # "mapping" the services 
          - path: /api/platforms # assigned "ip"
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv # cluster ip
                port:
                  number: 8080
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 8080
